# vqa_pipeline

./: .gitignore  README.md  pyproject.toml
src/vqa_pipeline/: __init__.py  geometry.py  image.py  lerobot2frames.py  visualisation.py
src/vqa_pipeline/vlm/: __init__.py  _typeclass.py  bbox_providers.py  vlms.py
